--- a/index.html
+++ b/index.html
@@ -2,33 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <main>
+    <div class="card">
+      <img src="assets/images/illustration-article.svg" alt="Random Illustration">
+      <div class="category">
+        <span>Learning</span>
+      </div>
+      <span>Published 21 Dec 2023</span>
+      <div class="title">
+        <h2>HTML & CSS foundations</h2>
+      </div>
+      <p id="content">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      <ul>
+        <li><img src="assets/images/image-avatar.webp" alt="Profile Photo" id="profile"></li>
+        <li>Greg Hooper</li>
+      </ul>
+    </div>
+  </main>
 
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Sarthk Kharwal</a>.
   </div>
 </body>
 </html>
